feat(VAutocomplete): port to v3 (#14728)
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -13,12 +13,11 @@
     .v-field__input
       cursor: inherit
 
+    input.v-field__input
+      opacity: 0
+
   .v-field.v-field
     cursor: pointer
-
-  &.v-input--dirty
-    input
-      opacity: 0
 
   &__content
     overflow: hidden
@@ -38,6 +37,7 @@
   &__selections
     align-items: flex-start
     color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity))
+    flex: 0 1
     display: flex
 
   &--active-menu
