--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -1,45 +1,73 @@
-@import './_variables.scss'
+@forward './variables'
+@use 'sass:selector'
+@use 'sass:math'
+@use '../../styles/settings'
+@use '../../styles/tools'
+@use './variables' as *
+@use '../VInput/variables' as *
 
 .v-autocomplete
-  &.v-input > .v-input__control > .v-input__slot
-    cursor: text
+  .v-field
+    .v-text-field__prefix,
+    .v-text-field__suffix,
+    .v-field__input,
+    &.v-field
+      cursor: text
 
-  input
-    align-self: center
+.v-autocomplete
+  &__content
+    overflow: hidden
 
-  // Overwrite v-text-fields
-  // minimum-width default
-  &.v-select.v-input--is-focused
-    input
-      min-width: $autocomplete-focused-input
+    @include tools.elevation($autocomplete-content-elevation)
+    @include tools.rounded($autocomplete-content-border-radius)
 
-  // Chips force input to wrap
-  // so we remove height and
-  // padding until focused
-  &:not(.v-input--is-focused).v-select--chips input
-    max-height: 0
-    padding: 0
+  &__search-input
+    opacity: 0
 
-  &--is-selecting-index
-    input
+  &__menu-icon
+    order: 1
+    margin-inline-start: 4px
+    transition: $autocomplete-transition
+
+  &__mask
+    background: rgb(var(--v-theme-on-surface-variant))
+
+  &__selection
+    display: inline-flex
+    margin-inline-end: 2px
+
+  &__selections
+    align-items: flex-start
+    color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity))
+    display: flex
+    flex: 0 1
+
+  &--active-menu
+    .v-autocomplete__menu-icon
+      color: inherit
+      transform: rotate(180deg)
+
+  &--chips
+    .v-autocomplete__selection
+      &:first-child
+        margin-inline-start: 0
+
+  &--single
+    input.v-field__input
+      position: absolute
+      left: 0
       opacity: 0
 
-  // When a single select, does not have
-  // selections padding
-  &.v-text-field--enclosed:not(.v-text-field--solo):not(.v-text-field--single-line):not(.v-text-field--outlined)
-    .v-select__slot > input
-      margin-top: $autocomplete-enclosed-input-margin-top
+    .v-field--focused
+      input.v-field__input
+        opacity: 1
 
-    &.v-input--dense
-      .v-select__slot > input
-        margin-top: $autocomplete-dense-enclosed-input-margin-top
+      .v-autocomplete__selections
+        opacity: 0
 
-  &:not(.v-input--is-disabled).v-select.v-text-field
-    input
-      pointer-events: inherit
+  &--multiple
+    input.v-field__input
+      padding-inline-start: 0
 
-  &__content.v-menu__content
-    border-radius: 0
-
-    .v-card
-      border-radius: 0
+    .v-autocomplete__selections
+      padding-inline-end: 0
