--- a/packages/vuetify/src/components/VAutocomplete/_variables.scss
+++ b/packages/vuetify/src/components/VAutocomplete/_variables.scss
@@ -1,5 +1,8 @@
-@import '../../styles/styles.sass';
+@use '../../styles/settings';
 
-$autocomplete-enclosed-input-margin-top: 24px !default;
-$autocomplete-dense-enclosed-input-margin-top: 20px !default;
-$autocomplete-focused-input: 64px !default;
+// Defaults
+$autocomplete-content-border-radius: 4px !default;
+$autocomplete-content-elevation: 4 !default;
+$autocomplete-line-height: 1.75 !default;
+$autocomplete-transition: .2s settings.$standard-easing !default;
+$autocomplete-chips-control-min-height: 64px !default;
