fix(VCard): remove opacity from v-card-text, use it in text color

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -129,10 +129,10 @@
     padding: $card-subtitle-header-padding
 
 .v-card-text
+  color: $card-text-color
   font-size: $card-text-font-size
   font-weight: $card-text-font-weight
   letter-spacing: $card-text-letter-spacing
-  opacity: $card-text-opacity
   padding: $card-text-padding
   text-transform: $card-text-text-transform
   transition: inherit
