Revert "fix(VApp): change color from on-background to on-surface"
This reverts commit 0cc111e3b312127a0245e471a6edfa390daa9c28.

--- a/packages/vuetify/src/components/VApp/VApp.sass
+++ b/packages/vuetify/src/components/VApp/VApp.sass
@@ -1,7 +1,7 @@
 .v-application
   display: flex
   background: rgb(var(--v-theme-background))
-  color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity))
+  color: rgba(var(--v-theme-on-background), var(--v-high-emphasis-opacity))
 
   a
     cursor: pointer
