feat(VGrid): change default padding from 12px to 16px

--- a/packages/vuetify/src/styles/settings/_variables.scss
+++ b/packages/vuetify/src/styles/settings/_variables.scss
@@ -107,8 +107,7 @@ $grid-breakpoints: map-deep-merge(
 $grid-gutter: $spacer * 6 !default;
 $form-grid-gutter: $spacer * 2 !default;
 $grid-columns: 12 !default;
-
-$container-padding-x: $grid-gutter * .5 !default;
+$container-padding-x: $spacer * 4 !default;
 
 $grid-gutters: () !default;
 $grid-gutters: map-deep-merge(
