fix(VCard): adjust v-card-actions location when following v-card-text

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -143,6 +143,9 @@
 
   @include card-line-height-densities($card-text-densities)
 
+  + .v-card-actions
+    margin-top: -.5rem
+
 .v-card-title
   align-items: center
   display: flex
