fix(VAutocomplete): persistent-placeholder visibility with no label

--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -65,6 +65,11 @@
       .v-autocomplete__selections
         opacity: 0
 
+    .v-field--active:not(.v-field--focused)
+      input.v-field__input
+        opacity: 0
+        transition: none
+
   &--multiple
     input.v-field__input
       padding-inline-start: 0
