--- a/packages/vuetify/src/components/VLabel/VLabel.sass
+++ b/packages/vuetify/src/components/VLabel/VLabel.sass
@@ -5,18 +5,12 @@
 
 .v-label
   align-items: center
-  color: $label-color
   cursor: pointer
   display: $label-display
   font-size: $label-font-size
   letter-spacing: $label-letter-spacing
   min-width: 0
+  opacity: var(--v-medium-emphasis-opacity)
   overflow: hidden
   text-overflow: ellipsis
   white-space: nowrap
-
-  &--disabled
-    color: $label-disabled-color
-
-  &--error
-    color: $label-error-color
