--- a/packages/vuetify/src/components/VMessages/VMessages.sass
+++ b/packages/vuetify/src/components/VMessages/VMessages.sass
@@ -4,11 +4,11 @@
 
 
 .v-messages
-  color: $messages-color
   flex: 1 1 auto
   font-size: $messages-font-size
   min-height: $messages-min-height
   min-width: 1px // Ensure takes up space with no messages and inside of flex
+  opacity: var(--v-medium-emphasis-opacity)
   position: relative
 
   &__item
