--- a/packages/vuetify/src/components/VSlider/VSliderTrack.sass
+++ b/packages/vuetify/src/components/VSlider/VSliderTrack.sass
@@ -32,6 +32,9 @@
     .v-slider--pressed &
       transition: none
 
+    .v-input--error:not(.v-input--disabled) &
+      background-color: currentColor
+
 .v-slider-track__ticks
   height: 100%
   width: 100%
