--- a/packages/vuetify/src/components/VSwitch/VSwitch.sass
+++ b/packages/vuetify/src/components/VSwitch/VSwitch.sass
@@ -16,7 +16,7 @@
   background-color: currentColor
   transition: none
 
-  .v-selection-control--error &
+  .v-selection-control--error:not(.v-selection-control--disabled) &
     background-color: $switch-error-background-color
 
 .v-switch__track
