--- a/packages/vuetify/src/components/VSlider/VSliderThumb.sass
+++ b/packages/vuetify/src/components/VSlider/VSliderThumb.sass
@@ -11,6 +11,9 @@
 .v-slider-thumb
   color: rgb(var(--v-theme-surface-variant))
 
+  .v-input--error:not(.v-input--disabled) &
+    color: inherit
+
 .v-slider-thumb__label
   background: rgba(var(--v-theme-surface-variant), .7)
   color: rgb(var(--v-theme-on-surface-variant))
