fix(colors.scss): change green-darken-text colors

--- a/packages/vuetify/src/styles/settings/_colors.scss
+++ b/packages/vuetify/src/styles/settings/_colors.scss
@@ -430,8 +430,8 @@ $text-on-green: map-deep-merge(
     'base': map-get($shades, 'black'),
     'darken-1': map-get($shades, 'black'),
     'darken-2': map-get($shades, 'black'),
-    'darken-3': map-get($shades, 'black'),
-    'darken-4': map-get($shades, 'black'),
+    'darken-3': map-get($shades, 'white'),
+    'darken-4': map-get($shades, 'white'),
     'accent-1': map-get($shades, 'black'),
     'accent-2': map-get($shades, 'white'),
     'accent-3': map-get($shades, 'white'),
