fix(colors): remove local defined colors, re-implement sass
there are 3 ways that background/text colors are derived:
* variant support (v-card, v-alert, etc)
* form control variants (uses a different variant system)
* paper components (v-sheet, v-toolbar, etc)

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -45,6 +45,7 @@
   &--variant-contained
     background: $field-control-contained-background
     border-color: transparent
+    color: $field-control-contained-color
 
     @include tools.elevation($field-control-contained-elevation)
 
