--- a/packages/vuetify/src/styles/tools/_variant.sass
+++ b/packages/vuetify/src/styles/tools/_variant.sass
@@ -23,6 +23,7 @@
   &--variant-contained,
   &--variant-contained-flat
     background: $contained-background
+    color: $contained-color
 
   @if ($contained-elevation > 0)
     &--variant-contained
