--- a/packages/vuetify/src/components/VBadge/_variables.scss
+++ b/packages/vuetify/src/components/VBadge/_variables.scss
@@ -1,13 +1,14 @@
 @use '../../styles/settings';
 
 // Defaults
+
+$badge-background: rgb(var(--v-theme-surface-variant)) !default;
+$badge-color: rgba(var(--v-theme-on-surface-variant), var(--v-high-emphasis-opacity)) !default;
 $badge-border-color: rgb(var(--v-theme-background)) !default;
 $badge-border-radius: 10px !default;
 $badge-border-style: solid !default;
 $badge-border-transform: scale(1.20) !default;
 $badge-border-width: 2px !default;
-$badge-background: rgb(var(--v-theme-surface)) !default;
-$badge-color: rgb(var(--v-theme-on-surface)) !default;
 $badge-content-padding: 0 2px !default;
 $badge-dot-border-radius: 4.5px;
 $badge-dot-border-width: 1.5px !default;
