--- a/packages/vuetify/src/components/VField/_variables.scss
+++ b/packages/vuetify/src/components/VField/_variables.scss
@@ -16,6 +16,7 @@ $field-clearable-transition: .15s opacity, .15s width settings.$standard-easing 
 
 // CONTROL
 $field-control-contained-background: rgb(var(--v-theme-surface)) !default;
+$field-control-contained-color: rgba(var(--v-theme-on-background), var(--v-high-emphasis-opacity)) !default;
 $field-control-contained-elevation: 2 !default;
 $field-control-filled-background: rgba(var(--v-theme-on-surface), var(--v-idle-opacity)) !default;
 $field-control-padding-start: 16px !default;
