--- a/packages/vuetify/src/components/VSheet/_variables.scss
+++ b/packages/vuetify/src/components/VSheet/_variables.scss
@@ -2,7 +2,7 @@
 
 // Defaults
 $sheet-background: rgb(var(--v-theme-surface)) !default;
-$sheet-color: rgb(var(--v-theme-on-surface)) !default;
+$sheet-color: rgba(var(--v-theme-on-background), var(--v-high-emphasis-opacity)) !default;
 $sheet-border-color: settings.$border-color-root !default;
 $sheet-border-radius: 0 !default;
 $sheet-border-style: settings.$border-style-root !default;
