fix(VSelectionControl): set control icon opacity when dirty

--- a/packages/vuetify/src/components/VSelectionControl/VSelectionControl.sass
+++ b/packages/vuetify/src/components/VSelectionControl/VSelectionControl.sass
@@ -83,6 +83,7 @@
     opacity: var(--v-medium-emphasis-opacity)
 
   .v-selection-control--disabled &,
+  .v-selection-control--dirty &,
   .v-selection-control--error &
     > .v-icon
       opacity: 1
