--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -15,6 +15,7 @@
 
     input.v-field__input
       opacity: 0
+      flex: 0 0
 
   .v-field.v-field
     cursor: pointer
@@ -33,11 +34,14 @@
   &__selection
     display: inline-flex
     margin-inline-end: 2px
+    margin-bottom: 2px
+    white-space: nowrap
 
   &__selections
     align-items: flex-start
     color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity))
     flex: 1 1
+    flex-wrap: wrap
     display: flex
 
   &--active-menu
