refactor(VBtn/VCard): remove text color transition
this is to match the rest of the framework, only
these 2 explicitly define color

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -20,7 +20,7 @@
   text-decoration: none
   text-indent: $button-text-letter-spacing
   text-transform: $button-text-transform
-  transition-property: box-shadow, transform, opacity, color
+  transition-property: $button-transition-property
   transition-duration: 0.28s
   transition-timing-function: settings.$standard-easing
   user-select: none
