--- a/packages/vuetify/src/components/VCard/_variables.scss
+++ b/packages/vuetify/src/components/VCard/_variables.scss
@@ -60,7 +60,7 @@ $card-title-padding: .5rem 1rem !default;
 $card-title-text-transform: none !default;
 $card-title-word-break: normal !default;
 $card-title-word-wrap: break-word !default;
-$card-transition-property: box-shadow, opacity, color !default;
+$card-transition-property: box-shadow, opacity, background !default;
 $card-transition-duration: 0.28s !default;
 $card-transition-timing-function: settings.$standard-easing !default;
 
