--- a/packages/vuetify/src/components/VSlideGroup/_variables.scss
+++ b/packages/vuetify/src/components/VSlideGroup/_variables.scss
@@ -1,3 +1,6 @@
-@import '../../styles/styles.sass';
+@use 'sass:math';
+@use 'sass:map';
+@use '../../styles/settings';
+@use '../../styles/tools';
 
 $slide-group-prev-basis: 52px !default;
