feat(VSnackbar): update to v3 (#14789)
Co-authored-by: John Leider <john.j.leider@gmail.com>

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -141,3 +141,8 @@
   &__overlay
     .v-pagination__item--is-active &
       opacity: $button-pagination-active-overlay-opacity
+
+// VSnackbar
+.v-btn
+  .v-snackbar-actions &
+    padding: $button-snackbar-action-padding
