--- a/packages/vuetify/src/components/VBtn/_variables.scss
+++ b/packages/vuetify/src/components/VBtn/_variables.scss
@@ -41,6 +41,7 @@ $button-text-transform: tools.map-deep-get(settings.$typography, 'button', 'text
 $button-transition-property: box-shadow, transform, opacity, background !default;
 $button-vertical-align: middle !default;
 $button-width-ratio: math.div(16, 9) !default;
+$button-snackbar-action-padding: 0 8px !default;
 $button-stacked-width-ratio: 1 !default;
 $button-rounded-border-radius: map.get(settings.$rounded, 'xl') !default;
 
